edition = "2023";

package ginbot.entertainment;

option go_package = "github.com/CrescentKohana/GinBot/pkg/gen/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service EntertainmentService {
  rpc GetRandomNumber(GetRandomNumberReq) returns (GetRandomNumberResp);
  rpc SetBirthday(SetBirthdayReq) returns (SetBirthdayResp);
}

message GetRandomNumberReq {
  enum REQUEST {
    DOUBLES = 0;
    INTERVAL = 1;
    ANY = 2;
  };

  REQUEST type = 3;
  string msg_id = 5;

  int32 digits = 6;
  int64 lower = 7;
  int64 upper = 8;
}

message GetRandomNumberResp {
  string number = 1;
}

message SetBirthdayReq {
  // User ID to set the birthday for
  int64 user_id = 1;
  // Birthday to set
  google.protobuf.Timestamp birthday = 2;
}

message SetBirthdayResp {
  // User ID of the user with the set birthday
  int64 user_id = 1;
  // Birthday of the user
  google.protobuf.Timestamp birthday = 2;
}
